0.20.24	UNRELEASED

 * config: disregard UTF-8 BOM when reading file.
   (Dan Villiom Podlaski Christiansen)

 * Skip lines with spaces only in .gitignore. (Andrey Torsunov, #878)

0.20.23	2021-05-24

 * Fix installation of GPG during package publishing.
   (Ruslan Kuprieiev)

0.20.22	2021-05-24

 * Prevent removal of refs directory when the last ref is
   deleted. (Jelmer Vernooĳ)

 * Fix filename: MERGE_HEADS => MERGE_HEAD.
   (Jelmer Vernooĳ, #861)

 * For ignored directories, porcelain.add and porcelain.status now only return
   the path to directory itself in the list of ignored paths. Previously, paths
   for all files within the directory would also be included in the list.
   (Peter Rowlands, #853)

 * Provide depth argument to ``determine_wants``.
   (Peter Rowlands)

 * Various tag signature handling improvements.
   (Daniel Murphy)

 * Add separate Tag.verify().  (Peter Rowlands)

 * Add support for version 3 index files. (Jelmer Vernooĳ)

 * Fix autocrlf=input handling. (Peter Rowlands, Boris Feld)

 * Attempt to find C Git global config on Windows.
   (Peter Rowlands)

 API CHANGES

 * The APIs for writing and reading individual index entries have changed
   to handle lists of (name, entry) tuples rather than tuples.

0.20.21	2021-03-20

 * Add basic support for a GcsObjectStore that stores
   pack files in gcs. (Jelmer Vernooĳ)

 * In porcelain.push, default to local active branch.
   (Jelmer Vernooĳ, #846)

 * Support fetching symrefs.
   (Jelmer Vernooĳ, #485, #847)

 * Add aarch64 wheel building.
   (odidev, Jelmer Vernooij)

0.20.20	2021-03-03

 * Implement ``Stash.drop``. (Peter Rowlands)

 * Support untracked symlinks to paths outside the
   repository. (Peter Rowlands, #842)

0.20.19	2021-02-11

 * Fix handling of negative matches in nested gitignores.
   (Corentin Hembise, #836)

0.20.18	2021-02-04

 * Fix formatting in setup.py. (Jelmer Vernooĳ)

 * Add release configuration. (Jelmer Vernooĳ)

0.20.17	2021-02-04
